add space for parent item

--- a/client.html
+++ b/client.html
@@ -371,7 +371,7 @@
                             <div class="col-price">Đơn giá</div>
                         </div>
                         <div class="item">
-                            <div class="row">
+                            <div class="row parent-item">
                                 <div class="left">
                                     <div class="col-img">
                                         <img
