add parent item for last

--- a/client.html
+++ b/client.html
@@ -456,7 +456,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="row">
+                            <div class="row parent-item">
                                 <div class="left">
                                     <div class="col-img">
                                         <img
